[package]
name = "ava-apartment-finder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
camino = "1.1.1"
chrono = { version = "0.4.22", features = ["serde"] }
clap = { version = "3.2.16", features = ["derive"] }
color-eyre = "0.6.2"
dirs = "4.0.0"
format_serde_error = "0.3.0"
itertools = "0.10.5"
jmap-client = { path = "./jmap-client/" }
owo-colors = { version = "3.5.0", features = ["supports-colors"] }
reqwest = "0.11.12"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
similar = { version = "2.2.0", features = ["inline"] }
soup = "0.5.1"
tap = "1.0.1"
textwrap = { version = "0.15.1", features = ["terminal_size"] }
tokio = { version = "1.21.1", features = ["full"] }
tracing = { version = "0.1.36", features = ["attributes"] }
tracing-subscriber = { version = "0.3.15", features = ["env-filter", "time", "json"] }

[dev-dependencies]
maplit = "1.0.2"
